force-app/main/default/objects/OrchestrationStatusUpdate__e/OrchestrationStatusUpdate__e.object-meta.xml
<CustomObject>
    <label>OrchestrationStatusUpdate</label>
    <pluralLabel>OrchestrationStatusUpdates</pluralLabel>
</CustomObject>