force-app/main/default/objects/OrchestrationStatusUpdate__e/fields/OrchestrationMemberId__c.field-meta.xml
<CustomField>
    <fullName>OrchestrationMemberId__c</fullName>
    <label>OrchestrationMemberId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>