force-app/main/default/objects/OrchestrationStatusUpdate__e/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>