force-app/main/default/objects/OrchestrationStatusUpdate__e/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <label>Record Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>